fix the background, color and text of the page

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         <p>Drag and drop or clicl to upload</p>
       </div>
       <div class="div_image-checkbox">
-        <input type="checkbox" id="image-upload">
-      <label for="image-upload">Upload your photo (JPG or PNG, max size: 500KB).</label>
+        <label class="custom-checkbox">
+          <input type="checkbox">
+          <span></span>Upload your photo (JPG or PNG, max size: 500KB).
+        </label>
       </div>
     </div>
     
