--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    
   <div class="wrapper">
     <header>
-      <h1>Your Journey to Coding Conf <br> 2025 Starts Here!</h1>
+      <h1>Your Journey to Coding Conf 2025 Starts Here!</h1>
     <p>Secure your spot at next year's biggest coding conference.</p>
     </header>
 
