fix the error and focus state

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p>Drag and drop or click to upload</p>
           <input type="file" id="imageInput" accept="image/*" hidden />
         </div>
-        <div class="div_image-checkbox" id="image-checkbox">
+        <div class="div_image-checkbox">
           <label class="custom-checkbox" id="errorImageUpload">
             <input type="checkbox" />
             <span></span>Upload your photo (JPG or PNG, max size: 500KB).
@@ -117,20 +117,6 @@
         </div>
       </div>
     </div>
-    <!-- Form starts -->
-
-    <!-- Form ends -->
-
-    <!-- Generated tickets starts -->
-
-    <!-- Congrats, Full Name! Your ticket is ready. -->
-
-    <!--  -->
-
-    <!-- Coding Conf
-  Jan 31, 2025 / Austin, TX -->
-
-    <!-- Generated tickets ends -->
 
     <div class="attribution">
       Challenge by
