fix the text, responsiveness and ticket shape

--- a/index.html
+++ b/index.html
@@ -89,31 +89,39 @@
         <span id="applicant-email">Email Address</span> and will send updates in
         the run up to the event.
       </p>
-
       <div class="ticket">
-        <!-- <img src="./assets/images/pattern-ticket.svg" alt="" /> -->
-        <div class="ticket-address">
-          <img src="./assets/images/logo-mark.svg" alt="logo" />
-          <div>
-            <p class="ticket-address-p1">Coding Conf</p>
-            <p class="ticket-address-p2">Jan 31, 2025 / Austin, TX</p>
+        <img
+          class="ticket-image"
+          src="./assets/images/pattern-ticket.svg"
+          alt="ticket"
+        />
+        <div class="ticket-content">
+          <div class="ticket-address">
+            <img src="./assets/images/logo-mark.svg" alt="logo" />
+            <div>
+              <p class="ticket-address-p1">Coding Conf</p>
+              <p class="ticket-address-p2">Jan 31, 2025 / Austin, TX</p>
+            </div>
+          </div>
+
+          <div class="ticket-info">
+            <img
+              id="ticketImage"
+              src="./assets/images/image-avatar.jpg"
+              alt="image-avatar"
+            />
+            <div>
+              <p class="ticket-info-p1">
+                <span id="applicant-name">Jonathan Kristof</span>
+              </p>
+              <p class="ticket-info-p2">
+                <span id="applicant-githubname">@example.com</span>
+              </p>
+            </div>
           </div>
         </div>
-
-        <div class="ticket-info">
-          <img
-            id="ticketImage"
-            src="./assets/images/image-avatar.jpg"
-            alt="image-avatar"
-          />
-          <div>
-            <p class="ticket-info-p1">
-              <span id="applicant-name">Jonathan Kristof</span>
-            </p>
-            <p class="ticket-info-p2">
-              <span id="applicant-githubname">@example.com</span>
-            </p>
-          </div>
+        <div class="ticket-num-div">
+          <p class="ticket-num">60910#</p>
         </div>
       </div>
     </div>
