update the text content on the drag and drop

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             src="./assets/images/icon-upload.svg"
             alt="icon-upload"
           />
-          <p>Drag and drop or click to upload</p>
+          <p id="drag-drop-instruction">Drag and drop or click to upload</p>
           <input type="file" id="imageInput" accept="image/*" hidden />
         </div>
         <div class="div_image-checkbox">
